--- a/JZ.Core.Models/JZ.Core.Models.csproj
+++ b/JZ.Core.Models/JZ.Core.Models.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Administrator\Documents\Visual Studio 2019\Projects\JZ.Core\JZ.Core.Models\JZ.Core.Models.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
